[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/Fonts/KiriFont.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/therok-regular-400.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/Kaph-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/BoxesBanners/Box_WhiteOutline_Square.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/Item2.png" type="Texture" id=5]
[ext_resource path="res://Assets/BoxesBanners/Box_Blank_Square.png" type="Texture" id=6]
[ext_resource path="res://Assets/UIIcons/Icon_Small_Blank_Pause.png" type="Texture" id=7]
[ext_resource path="res://Assets/GUI/Box_Rounded.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/IconButton_Large_Orange_Circle.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/Blue_Square.png" type="Texture" id=10]
[ext_resource path="res://Levels/PagguhitNgAlpabeto/Level1/2ndQuestion/Level1Q1PNA.gd" type="Script" id=11]
[ext_resource path="res://Levels/PagguhitNgAlpabeto/Level1/2ndQuestion/PausePanelPNA0.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 1280, 720 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 2
outline_color = Color( 0.776471, 0.776471, 0.776471, 1 )
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 2
outline_color = Color( 0.776471, 0.776471, 0.776471, 1 )
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 30
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 30
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 65
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 65
use_filter = true
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 26
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 26
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 18
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 2
extra_spacing_bottom = 2
extra_spacing_char = 2
extra_spacing_space = 2
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 18
use_filter = true
extra_spacing_top = 2
extra_spacing_bottom = 2
extra_spacing_char = 2
extra_spacing_space = 2
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 20
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 20
use_filter = true
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=16]
size = 20
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
size = 20
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
extra_spacing_bottom = -13
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
size = 20
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = -13
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=19]
size = 20
outline_size = 2
outline_color = Color( 0.235294, 0.235294, 0.235294, 1 )
use_filter = true
extra_spacing_bottom = -7
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=20]
size = 20
use_filter = true
extra_spacing_top = 2
extra_spacing_bottom = -16
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="levelBox" type="TextureRect" parent="background"]
anchor_left = 0.305664
anchor_top = 0.035
anchor_right = 0.669922
anchor_bottom = 0.138333
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="level1Line" type="Label" parent="background/levelBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = -3.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="level1Label" type="Label" parent="background/levelBox"]
anchor_right = 1.0
anchor_bottom = 0.935484
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 3 )
text = "Level 1"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="level1Label2" type="Label" parent="background/levelBox/level1Label"]
anchor_left = -0.00106838
anchor_top = -0.0491803
anchor_right = 0.998932
anchor_bottom = 0.95082
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 4 )
text = "level 1"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pauseButton" type="Button" parent="background"]
anchor_left = 0.00683594
anchor_top = 0.0233333
anchor_right = 0.100586
anchor_bottom = 0.138333
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 9 )
flat = true
clip_text = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pauseIcon" type="TextureRect" parent="background/pauseButton"]
anchor_left = 0.333333
anchor_top = 0.202899
anchor_right = 0.65625
anchor_bottom = 0.768116
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="imageHolder" type="Sprite" parent="background"]
position = Vector2( 229, 302 )
scale = Vector2( 0.202315, 0.2091 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="imageText" type="TextureRect" parent="background"]
anchor_left = 0.0859375
anchor_top = 0.771667
anchor_right = 0.363281
anchor_bottom = 0.918333
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="exampleLabel2" type="Label" parent="background/imageText"]
anchor_top = 0.0113636
anchor_right = 1.0
anchor_bottom = 1.01136
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 5 )
text = "halimbawang larawan"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="exampleLabel" type="Label" parent="background/imageText"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 6 )
text = "halimbawang larawan"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="exampleLabel" type="Label" parent="background/imageText/exampleLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.0
margin_bottom = -3.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 7 )
text = "halimbawang larawan"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="AnswerPanel" type="HBoxContainer" parent="background"]
anchor_left = 0.529297
anchor_top = 0.773333
anchor_right = 0.866211
anchor_bottom = 0.931667
custom_constants/separation = 30
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="A" type="Button" parent="background/AnswerPanel"]
margin_right = 95.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 8 )
flat = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true
}

[node name="pickA" type="Label" parent="background/AnswerPanel/A"]
anchor_left = 0.0947368
anchor_top = 0.0842112
anchor_right = 0.905263
anchor_bottom = 0.926316
rect_min_size = Vector2( 75, 75 )
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 8 )
text = "A
"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pickA2" type="Label" parent="background/AnswerPanel/A/pickA"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 9 )
text = "A"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="B" type="Button" parent="background/AnswerPanel"]
margin_left = 125.0
margin_right = 220.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 8 )
flat = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true
}

[node name="pickB" type="Label" parent="background/AnswerPanel/B"]
anchor_left = 0.0842105
anchor_top = 0.147368
anchor_right = 0.915789
anchor_bottom = 0.936842
rect_min_size = Vector2( 75, 75 )
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 8 )
text = "B
"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pickB2" type="Label" parent="background/AnswerPanel/B/pickB"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 9 )
text = "B"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="C" type="Button" parent="background/AnswerPanel"]
margin_left = 250.0
margin_right = 345.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 8 )
flat = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true
}

[node name="pickC" type="Label" parent="background/AnswerPanel/C"]
anchor_left = 0.0842105
anchor_top = 0.0947368
anchor_right = 0.915789
anchor_bottom = 0.936842
rect_min_size = Vector2( 75, 75 )
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 8 )
text = "C"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pickC2" type="Label" parent="background/AnswerPanel/C/pickC"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 9 )
text = "C"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="askHolder" type="TextureRect" parent="background"]
anchor_left = 0.450195
anchor_top = 0.185
anchor_right = 0.94043
anchor_bottom = 0.75
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="tanongLabel" type="Label" parent="background/askHolder"]
anchor_left = 0.0498008
anchor_top = 0.0501475
anchor_right = 0.611554
anchor_bottom = 0.185841
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 10 )
text = "katanungan:"
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="tanongLabel0" type="Label" parent="background/askHolder/tanongLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 11 )
text = "katanungan:"
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="askLabel" type="Label" parent="background/askHolder"]
anchor_left = 0.0717131
anchor_top = 0.19174
anchor_right = 0.898406
anchor_bottom = 0.442478
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 12 )
text = "1. Batay sa iyung narinig, ang nasa larawan ba, ay isang Gulay o Prutas?"
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="askLabel2" type="Label" parent="background/askHolder/askLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 13 )
text = "1. Batay sa iyung narinig,
ang nasa larawan ba, ay isang Gulay o Prutas?"
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="answerLabelA" type="Label" parent="background/askHolder"]
anchor_left = 0.0756972
anchor_top = 0.460177
anchor_right = 0.816733
anchor_bottom = 0.551622
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 14 )
text = "A. Ito po ay isang Gulay."
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="answerLabel2" type="Label" parent="background/askHolder/answerLabelA"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 15 )
text = "A. ito po ay isang gulay."
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="answerLabelB" type="Label" parent="background/askHolder"]
anchor_left = 0.0796813
anchor_top = 0.572271
anchor_right = 0.878486
anchor_bottom = 0.663717
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 16 )
text = "B. Ito po ay isang Prutas."
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="answerLabelB2" type="Label" parent="background/askHolder/answerLabelB"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 15 )
text = "B. ito po ay isang prutas."
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="answerLabelC" type="Label" parent="background/askHolder"]
anchor_left = 0.0796813
anchor_top = 0.634218
anchor_right = 0.960159
anchor_bottom = 0.761062
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 17 )
text = "C. Ito po ay parehong prutas"
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="answerLabelC2" type="Label" parent="background/askHolder/answerLabelC"]
anchor_right = 1.0
anchor_bottom = 1.2093
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 18 )
text = "C. ito po ay parehong prutas
"
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="answerLabelC2" type="Label" parent="background/askHolder"]
anchor_left = 0.143426
anchor_top = 0.746313
anchor_right = 0.472112
anchor_bottom = 0.840708
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 19 )
text = "at gulay.  "
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="answerLabelC2" type="Label" parent="background/askHolder/answerLabelC2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 20 )
text = "at gulay
"
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pausePanel" parent="." instance=ExtResource( 12 )]
unique_name_in_owner = true

[connection signal="pressed" from="background/pauseButton" to="." method="_on_pauseButton_pressed"]
[connection signal="pressed" from="background/AnswerPanel/A" to="." method="_on_A_pressed"]
[connection signal="pressed" from="background/AnswerPanel/B" to="." method="_on_B_pressed"]
[connection signal="pressed" from="background/AnswerPanel/C" to="." method="_on_C_pressed"]
[connection signal="pressed" from="pausePanel/bg/x" to="." method="_on_x_pressed"]

[editable path="pausePanel"]
